# opaque-pointer-rs

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: cargo-audit.yml  cargo-publish.yml  checks.yml  ci.yml  rust-check-test.yml  rust-ci.yml  rust-lint-fmt.yml  rust-nightly-check-test.yml  rust-nightly-lint-fmt.yml  test.yml
src/: c.rs  error.rs  lender.rs  lib.rs  validation.rs
tests/: pointer.rs  thread_safety.rs
