[package]
name = "opaque-pointer"
version = "0.8.0"
description = "Generic functions to work with opaque pointers when use FFI to expose Rust structs"
authors = ["Jesus Hernandez <jesushdez@protonmail.com>"]
license = "Unlicense"
keywords = ["pointer", "opaque", "pointers", "cbindgen", "ffi"]
categories = ["development-tools::ffi", "no-std"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/jhg/opaque-pointer-rs/"
exclude = [".github/**", ".vscode/**"]

[features]
default = ["std"]
std = []
# If you does not use std then you need alloc feature
alloc = []
# Allow to use some FFI for C types
c-types = ["std"]

[dependencies]
log = "^0"

[package.metadata.docs.rs]
features = ["std", "c-types"]
