[package]
name = "opaque-pointer"
version = "0.8.10"
description = "Generic functions to work with opaque pointers when use FFI to expose Rust structs"
authors = [
    "Jesus Hernandez <jesushdez@protonmail.com>",
    "Dylan DPC",
]
license = "Unlicense"
keywords = ["opaque", "pointers", "cbindgen", "ffi", "no_std"]
categories = ["development-tools::ffi", "no-std"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/jhg/opaque-pointer-rs/"
exclude = [
    ".github/**",
    ".vscode/**",
]
rust-version = "1.57.0" # For HashSet::try_reserve

[features]
default = ["std"]
std = []
lender = ["lazy_static"]
# If you do not use std then you need alloc feature
alloc = []
# Allow to use some FFI for C types
c-types = ["std"]

[dependencies]
log = "0.4"
lazy_static = { version = "1.4", optional = true }

[package.metadata.docs.rs]
features = ["std", "lender"]
